--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Phone Company App" Height="450" Width="800">
     <Grid>
-        <DataGrid x:Name="SubscribtionsDataGrid" AutoGenerateColumns="False" Margin="10">
+        <DataGrid x:Name="SubscriptionsDataGrid" AutoGenerateColumns="False" Margin="10">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="FIO" Binding="{Binding Fio}" />
                 <DataGridTextColumn Header="Street" Binding="{Binding Address.StreetName}" />
